# social-network/docs/openapi/swagger.yaml
@@ -145,6 +145,54 @@ paths:
         '503':
           $ref: '#/components/responses/5xx'
 
+  /friend/set/{user_id}:
+    put:
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - name: user_id
+          schema:
+            $ref: '#/components/schemas/UserId'
+          required: true
+          in: path
+      responses:
+        '200':
+          description: Пользователь успешно указал своего друга
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+        '404':
+          description: Друг не найден
+        '500':
+          $ref: '#/components/responses/5xx'
+        '503':
+          $ref: '#/components/responses/5xx'
+
+  /friend/delete/{user_id}:
+    put:
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - name: user_id
+          schema:
+            $ref: '#/components/schemas/UserId'
+          required: true
+          in: path
+      responses:
+        '200':
+          description: Пользователь успешно удалил из друзей пользователя
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+        '404':
+          description: Друг не найден
+        '500':
+          $ref: '#/components/responses/5xx'
+        '503':
+          $ref: '#/components/responses/5xx'
+
   /post/create:
     post:
       security:
